force-app/main/default/objects/Branch_Master__c/Branch_Master__c.object-meta.xml
<CustomObject>
    <label>Branch Master</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branch Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>