force-app/main/default/objects/Branch_Master__c/fields/Branch_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Branch_Address_Line_2__c</fullName>
    <label>Branch Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>