force-app/main/default/objects/Branch_Master__c/fields/Branch_category__c.field-meta.xml
<CustomField>
    <fullName>Branch_category__c</fullName>
    <label>Branch category</label>
    <length>20</length>
    <type>Text</type>
</CustomField>