force-app/main/default/objects/Branch_Master__c/fields/Branch_Country__c.field-meta.xml
<CustomField>
    <fullName>Branch_Country__c</fullName>
    <label>Branch Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>