force-app/main/default/objects/Branch_Master__c/fields/Branch_District__c.field-meta.xml
<CustomField>
    <fullName>Branch_District__c</fullName>
    <label>Branch District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>