force-app/main/default/objects/Branch_Master__c/fields/Branch_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Branch_Pincode__c</fullName>
    <label>Branch Pincode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>