force-app/main/default/objects/Branch_Master__c/fields/Branch_State__c.field-meta.xml
<CustomField>
    <fullName>Branch_State__c</fullName>
    <label>Branch State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>