force-app/main/default/objects/Branch_Master__c/fields/Collection_Branch__c.field-meta.xml
<CustomField>
    <fullName>Collection_Branch__c</fullName>
    <label>Collection Branch</label>
    <length>20</length>
    <type>Text</type>
</CustomField>