force-app/main/default/objects/Branch_Master__c/fields/HO_HUB__c.field-meta.xml
<CustomField>
    <fullName>HO_HUB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HO/HUB</label>
    <referenceTo>Branch_Master__c</referenceTo>
    <relationshipLabel>Branch Masters</relationshipLabel>
    <relationshipName>Branch_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>